--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ a:visited {
 }
 
 .background-image {
-  background-image: url("images/ant1.png");
+  /* background-image: url("images/ant1.png"); */
   background-size: cover;
   background-repeat: no-repeat;
   width: auto;
